[tool.poetry]
name = "presentation-mode"
version = "0.1.0"
description = ""
authors = ["Simon Brulhart <simon@brulhart.me>"]

[tool.poetry.dependencies]
python = "^3.7"
DBussy = "^1.2"
slackclient = "^2.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
